--- a/scss/_experiments.scss
+++ b/scss/_experiments.scss
@@ -260,3 +260,9 @@
     }
   }
 }
+
+.arrow-static {
+  position: absolute;
+
+  top: 45vw;
+}
